--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   supabase_flutter: ^2.12.0
   http: ^1.1.0
+  flutter_dotenv: ^5.1.0
 
 # After:
 dev_dependencies:
@@ -20,3 +21,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
