--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   http: ^1.1.0
   flutter_dotenv: ^5.1.0
 
+    
+
 # After:
 dev_dependencies:
   flutter_test:
@@ -24,4 +26,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - .env
+    - assets/images/1.jpeg
+    - assets/images/2.jpeg
+    - assets/images/3.jpeg
+    - assets/images/Paris.jpeg
+    #- .env
+
