--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   http: ^1.1.0
   flutter_dotenv: ^5.1.0
   provider: ^6.1.1
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
     
 
 # After:
